syntax = "proto3";

package netcluster;

message Master_PublishServerStatus {
    uint32 ServerId = 1;
    uint32 ServerType = 2;
    bool IsConnected = 3;
    bool IsWorking = 4;
}

message Slave_ReportLoadLevel {
    bool isFix = 1;
    uint32 AServerID = 2;
    uint32 BServerID = 3;
}

message Master_PublishLoadLevel {
    uint32 LoadLevel = 1;
}

message Slave_ReqShiftFixMaster {
    uint32 MasterID = 1;
    uint32 AServerID = 2;
    uint32 BServerID = 3;
}
message Slave_RepShiftFixMaster {
    uint32 MasterID = 1;
    uint32 AServerID = 2;
    uint32 BServerID = 3;
}

message Slave_ReqVerifyConfigFile {
    string  FileMd5 = 1;
}

message Master_ReqVerifyConfigFile {
    string  FileMd5 = 1;
    int64   Time = 2;
    uint32  ReqServerId = 3;
    uint32  ReqServerType = 4;
}

message Slave_RepVerifyConfigFile {
    bool    IsSucc = 1;
    int64   Time = 2;
    uint32  ReqServerId = 3;
    uint32  ReqServerType = 4;
}

message Slave_UptConfigMd5 {
    string  FileMd5 = 1;
}

// gm命令slave准备停止服务(slave->slave)
message SS_CmdPrepareCloseServer {
}

// 我要准备关闭了 (slave->master)
message SM_ReqPrepareCloseMyself {
}